# llm-serving-platform

./: Cargo.toml  README.md
go/: go.mod  go.sum
go/cmd/scheduler/: main.go
go/internal/api/: router.go
go/internal/models/: job.go
internal/api/: handlers.go
rust/db/: Cargo.toml  db.md
rust/db/src/: lib.rs
rust/db/src/btree/: btree.rs
rust/db/src/lsm/: bloom.rs  compaction.rs  lsm.rs  memtable.rs  mod.rs  sstable.rs
rust/db/src/series/: series.rs
rust/db/src/server/: mod.rs
rust/db/src/skiplist/: skiplist.rs
rust/db/src/wal/: wal.rs
rust/db/tests/: README.md  bloom_test.rs  btree_test.rs  compaction_test.rs  lsm_test.rs  memtable_test.rs  series_test.rs  skiplist_test.rs  sstable_test.rs  wal_test.rs
rust/objectstore/: Cargo.toml
rust/transformer/: Cargo.toml
rust/transformer/src/: attention.rs  ffn.rs  lib.rs  model.rs  rope.rs  tokenizer.rs  weights.rs
rust/transformer/src/generate/: decode.rs  kv_transfer.rs  mod.rs  prefill.rs
rust/transformer/tests/: attention_test.rs  ffn_test.rs
